src/UI/app/views/DeckPreview/DeckPreview.css
.icon {
  fill: black;
  fill-opacity: .54;
}

.chip {
  font-family: Roboto,"Helvetica Neue",sans-serif;
  font-size: 16px;
  background: #E0E0E0;
  color: #424242;
  cursor: default;
  border-radius: 16px;
  display: block;
  height: 32px;
  line-height: 32px;
  margin: 4px 4px;
  padding: 0 8px;
  float: left;
  box-sizing: border-box;
  max-width: 100%;
  position: relative;
}

.publish-button {
  color: white;
  background-color: #43A047;
}

.notification-card {
  padding: 0;
}

.notification-card_image {
  width: 100px;
  background-color: gainsboro;
}

.secondary-header-text {
  width: 70%;
}

.deck-info_languages {
  padding: 1em 0;
}

md-card {
  margin-bottom: 0;
  margin-top: 1.5em;
}

